Fix overflow-scroll for all sections

--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -23,3 +23,6 @@
   --scroll-behavior: smooth;
   scroll-behavior: var(--scroll-behavior);
 }
+.scroll-mt-4 {
+  scroll-margin-top: 2rem
+}
